api/ingress.yaml
apiVersion: extensions/v1beta1  
kind: Ingress  
metadata:  
  name: rest-api
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: cdc.kotara.com
    http:
      paths:
      - backend:
          serviceName: rest-api
          servicePort: 80
        path: /measure
  - host: cdc.kotara.com
    http:
      paths:
      - backend:
          serviceName: rest-api
          servicePort: 80
        path: /locations
  - host: cdc.kotara.com
    http:
      paths:
      - backend:
          serviceName: rest-api
          servicePort: 80
        path: /data
  tls:
  - hosts:
    - cdc.kotara.com
    secretName: cdc.kotara.com
